@@ -18,6 +18,7 @@ eZ Online Editor MCE extension Changelog
 * Implemented #013076: Browse popup: improve image preview
 * Implemented #013019: Move "Enable/Disable Editor" button to OE toolbar
 * Implemented #009397: Missing OE Toolbar Buttons - #1 - save and #2 - publish
+* Implemented #012949: Cannot change the node of an embedded object once it has been added
 
 5.0Beta2
 * Added debug as text comment in ajax view's (embed_view, expand, load and search)
